--- a/UnionFind/UnionFind.vcxproj
+++ b/UnionFind/UnionFind.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="UnionFind1.h" />
     <ClInclude Include="UnionFind2.h" />
+    <ClInclude Include="UnionFind3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
