--- a/UnionFind/UnionFind.vcxproj.filters
+++ b/UnionFind/UnionFind.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="UnionFind2.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="UnionFind3.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
