--- a/UnionFind/UnionFind.vcxproj
+++ b/UnionFind/UnionFind.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="UnionFind1.h" />
     <ClInclude Include="UnionFind2.h" />
     <ClInclude Include="UnionFind3.h" />
+    <ClInclude Include="UnionFind4.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
