--- a/UnionFind/UnionFind.vcxproj.filters
+++ b/UnionFind/UnionFind.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="UnionFind4.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="UnionFindTestHelper.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
